# mpUtils

./: CMakeLists.txt  README.md  todo.md
cmake/: GetVersionFromGit.cmake  addResources.cmake  cudaConvertFlags.cmake  mpUtilsConfig.cmake.in  oldrootcmakelisttxt.cmake  selectComputeArch.cmake  setDefaultTypeRelease.cmake
examples/01_basic_code/: CMakeLists.txt  main.cpp
examples/02_hello_triangle/: CMakeLists.txt  main.cpp  minimalFragmentShader.frag  minimalVertexShader.vert
examples/03_improved_triangle/: CMakeLists.txt  main.cpp  minimalColorFS.frag  minimalColorVS.vert
examples/04_3D_Triangle/: CMakeLists.txt  main.cpp
examples/05_3D_TrianglesWithCamera/: CMakeLists.txt  main.cpp  minimal3DVS.vert
examples/argParserTest/: CMakeLists.txt  main.cpp
examples/cudaTest/: CMakeLists.txt  dummy.cpp  main.cu
examples/devTest/: CMakeLists.txt  main.cpp
examples/graphics/: CMakeLists.txt  main.cpp
examples/graphicsTest/: CMakeLists.txt  main.cpp
examples/imGuiTest/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp
examples/imageTest/: CMakeLists.txt  main.cpp
examples/matrixTest/: CMakeLists.txt  main.cu
examples/resourceCompiler/: CMakeLists.txt  main.cpp
examples/resourceManagerTest/: CMakeLists.txt  main.cpp  testSheet.spritesheet  testSprite.sprite
examples/serialPort/: CMakeLists.txt  main.cpp
examples/templateExperiments/: CMakeLists.txt  main.cpp
examples/tilemapEditor/: CMakeLists.txt  TilemapEditor.cpp  TilemapEditor.h  main.cpp
examples/tilemapEditor/defaultWorkdir/sprites/: water_0.sprite  water_1.sprite  water_2.sprite  water_3.sprite  water_4.sprite
examples/tomlTest/: CMakeLists.txt  main.cpp
include/mpUtils/: mpCuda.h  mpGraphics.h  mpUtils.h
include/mpUtils/Cfg/: ArgParser.h
include/mpUtils/Cuda/: DeviceVector.h  GlBufferMapper.h  ManagedAllocator.h  Matrix.h  MatrixMath.h  MemoryModifiers.h  PinnedAllocator.h  VectorReference.h  cudaUtils.h  helper_math_missing.h
include/mpUtils/Graphics/: Input.h  Window.h
include/mpUtils/Graphics/ContentCreation/: Sprite2DTools.h
include/mpUtils/Graphics/Gui/: ImGui.h  ImGuiElements.h  ImGuiStyles.h  ImGuiWindows.h
include/mpUtils/Graphics/Opengl/: Buffer.h  Framebuffer.h  Handle.h  Sampler.h  Shader.h  SyncObject.h  Texture.h  VertexArray.h
include/mpUtils/Graphics/Opengl/glsl/: Preprocessor.h
include/mpUtils/Graphics/Rendering/: Camera.h  Renderer2D.h  ScreenFillingTri.h  Sprite2D.h  SpriteInstance2D.h
include/mpUtils/Graphics/Rendering2D/: Camera2D.h  Renderer2D.h  Sprite2D.h  SpriteInstance2D.h  TileType.h  Tilemap.h
include/mpUtils/Graphics/Scenes/: Scene.h  SceneManager.h
include/mpUtils/Graphics/Utils/: Transform.h  Transform2D.h  autotile.h  misc.h
include/mpUtils/IO/: SerialPort.h  SerialPortStream.h  posixSerialPortDefines.h
include/mpUtils/Log/: BufferedSink.h  ConsoleSink.h  FileSink.h  Log.h  LogStream.h
include/mpUtils/Misc/: CallbackHandler.h  CopyMoveAtomic.h  EmbeddedData.h  Image.h  Resource.h  RingBuffer.h  StateMachine.h  additionalMath.h  alignment.h  callbackUtils.h  copyMoveWrapper.h  imageLoading.h  pointPicking.h  stringUtils.h  templateUtils.h  tomlStore.h  type_traitUtils.h  unordered_map2d.h
include/mpUtils/ResourceManager/: RefcountingHelper.h  Resource.h  ResourceCache.h  ResourceManager.h  mpGraphicsResources.h  mpUtilsResources.h  readData.h
include/mpUtils/Timer/: AsyncTimer.h  Stopwatch.h  Timer.h
resources/fonts/: LICENSE.txt
shader/: solidColor.frag  sprite.frag  sprite.vert
shader/include/: random.glsl
src/Cfg/: CfgFile.cpp
src/CmakeConfigureTemplates/: paths.h.in  version.h.in
src/Cuda/: Matrix.h  cudaUtils.h
src/Graphics/: Input.cpp  InputDetail.h  InputInternal.h  Window.cpp
src/Graphics/ContentCreation/: Sprite2DTools.cpp
src/Graphics/Gui/: ImGui.cpp  ImGuiElements.cpp  ImGuiStyles.cpp  ImGuiWindows.cpp
src/Graphics/Opengl/: Buffer.cpp  Framebuffer.cpp  Sampler.cpp  Shader.cpp  SyncObject.cpp  Texture.cpp
src/Graphics/Opengl/glsl/: Preprocessor.cpp
src/Graphics/Rendering/: Camera.cpp  Renderer2D.cpp  Sprite2D.cpp  SpriteInstance2D.cpp
src/Graphics/Rendering2D/: Camera2D.cpp  Renderer2D.cpp  Sprite2D.cpp  TileType.cpp  Tilemap.cpp
src/Graphics/Scenes/: SceneManager.cpp
src/Graphics/Utils/: ModelViewProjection.cpp  Transform.cpp  Transform2D.cpp
src/IO/: SerialPortStream.cpp  posixSerialPort.cpp
src/Log/: BufferedSink.cpp  ConsoleSink.cpp  FileSink.cpp  Log.cpp  Log.h  LogStream.cpp  LogStream.h  SyslogSink.cpp
src/Misc/: Image.cpp  imageLoader.cpp  stringUtils.cpp
src/ResourceManager/: ResourceCache.cpp  mpGraphicsResources.cpp  mpUtilsResources.cpp
